# igsn_lib

./: .buildinfo  .gitignore  .travis.yml  README.adoc  README.md  example_harvest.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: gh-pages.yml
_modules/: igsn_lib.html  index.html
_modules/igsn_lib/: models.html  oai.html  time.html  util.html
_modules/sqlalchemy/orm/: attributes.html
_sources/: index.rst.txt
_sources/api/: igsn_lib.models.rst.txt  igsn_lib.oai.rst.txt  igsn_lib.rst.txt  igsn_lib.time.rst.txt  igsn_lib.util.rst.txt  index.rst.txt
_sources/notes/: igsn_counts.rst.txt
api/: igsn_lib.html  igsn_lib.models.html  igsn_lib.oai.html  igsn_lib.time.html  igsn_lib.util.html  index.html
data/: endpoints.json
docs/: oai_list_sets.ipynb
docs/source/: conf.py  examine_oai.md  index.rst  pull_bib.py
docs/source/_static/css/: custom.css
docs/source/api/: igsn_lib.models.rst  igsn_lib.oai.rst  igsn_lib.rst  igsn_lib.time.rst  igsn_lib.util.rst
igsn_lib/: __init__.py  models.py  oai.py  time.py  util.py
igsn_lib/models/: __init__.py  relation.py  thing.py
notes/: igsn_counts.html
tests/: test_core.py  test_oai.py  test_time.py
