[tool.poetry]
name = "igsn_lib"
version = "0.2.1"
description = "Utilities for working with IGSNs"
authors = ["datadavev <datadavev@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.0"
aiohttp-requests = "^0.1.3"
aiodns = "^2.0.0"
requests = "^2.24.0"
dateparser = "^0.7.6"
sqlalchemy = "^1.3.19"
xmltodict = "^0.12.0"
sickle = "^0.7.0"
jupyterlab = "^2.2.8"
sphinx-book-theme = ">=0.0.37"
sphinx-autobuild = "^2020.9.1"
MyST-NB = "^0.10.1"
jupyter-sphinx = "^0.3.2"
sphinx-thebe = "^0.0.7"
psycopg2 = "^2.8.6"
astropy = "^4.0.1"
numpy = "^1.19.2"
sphinx_copybutton = "^0.3.0"
sphinxcontrib-bibtex = "^1.0.0"
sphinx = "^3.2.1"
sphinx-automodapi = "^0.13"
alembic = ">=1.4.3"
pandas = "^1.1.3"
nbsphinx = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
