[tool.poetry]
name = "igsn_lib"
version = "0.5.3"
description = "Utilities for working with IGSNs"
authors = ["datadavev <datadavev@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.3"
aiohttp-requests = "^0.1.3"
aiodns = "^2.0.0"
requests = "^2.25.1"
dateparser = "^1.0.0"
xmltodict = "^0.12.0"
psycopg2-binary = "^2.8.6"
astropy = "^4.2.1"
numpy = "^1.20.2"
alembic = "^1.5.8"
pandas = "^1.2.3"
SQLAlchemy = "^1.4.7"
Sickle = "^0.7.0"

[tool.poetry.dev-dependencies]
#MyST-NB = "^0.10.1"
#sphinx-thebe = "^0.0.7"
jupyterlab = "^3.0.14"
jupyter-sphinx = "^0.3.2"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.3.1"
sphinx-book-theme = "^0.0.42"
sphinxcontrib-bibtex = "^2.2.0"
nbsphinx = "^0.8.3"
sphinx-automodapi = "^0.13"
sphinx-togglebutton = "^0.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
